сделал боковую панель клиентов, Init()

--- a/popup.html
+++ b/popup.html
@@ -7,14 +7,24 @@
   </head>
 
   <body>
-    <div id='main'>
-        <table id='payment-table'>
-          <tehead>
-          </tehead>
-          <tbody>
-          </tbody>
-        </table>
+
+    <div id="contener">
+      <div id="aside-left">
+        <ul id="ul-cat">
+
+        </ul>
+      </div>
+      <div id='main'>
+          <table id='payment-table'>
+            <tehead>
+            </tehead>
+            <tbody>
+            </tbody>
+          </table>
+      </div>
+
     </div>
+
     <script src="PaymentClass.js"></script>
     <script src="popup.js"></script>    
   </body>  
