--- a/popup.html
+++ b/popup.html
@@ -21,7 +21,7 @@
 
     </div>
 
-    <script src="PaymentClass.js"></script>
+    <script src="paymentclass.js"></script>
     <script src="popup.js"></script>    
   </body>  
 </html>
